<resources>
    <string name="app_name">Jungsoos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="remove">Remove</string>
    <string name="increse_one">Increse One</string>
    <string name="reduce_one">Reduce One</string>
    <string name="total_cost">Total Cost:</string>
    <string name="id">Id:</string>
    <string name="_0000">0000</string>
    <string name="name">Name:</string>
    <string name="name2">Name</string>
    <string name="quantity">Quantity:</string>
    <string name="add_item">Add Item</string>
</resources>