<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="2dp"
    android:background="@drawable/bg_cyan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/id_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/_0000"
        app:layout_constraintStart_toEndOf="@id/id_lable"
        app:layout_constraintTop_toTopOf="@id/id_lable" />

    <TextView
        android:id="@+id/name_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@id/itemId"
        app:layout_constraintTop_toTopOf="@id/itemId" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name2"
        app:layout_constraintStart_toEndOf="@id/name_lable"
        app:layout_constraintTop_toTopOf="@id/name_lable" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="@id/id_lable"
        app:layout_constraintTop_toBottomOf="@id/id_lable" />

    <TextView
        android:id="@+id/etAmount"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@id/quantity"
        app:layout_constraintTop_toTopOf="@id/quantity" />

    <ImageView
        android:id="@+id/plusOne"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/increse_one"
        android:src="@drawable/ic_plus"
        app:layout_constraintStart_toEndOf="@id/etAmount"
        app:layout_constraintTop_toTopOf="@id/etAmount" />

    <ImageView
        android:id="@+id/minusOne"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/reduce_one"
        android:src="@drawable/ic_minus"
        app:layout_constraintStart_toEndOf="@id/plusOne"
        app:layout_constraintTop_toTopOf="@id/plusOne" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trash"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/trash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>